# SpeakDrop

./: README.md  pyproject.toml
.github/workflows/: build.yml  complexity.yml  lint.yml  release.yml  test.yml
docs/: release.md
docs/sdd/design/: design.md
docs/sdd/requirements/: index.md
docs/sdd/requirements/nfr/: maintainability.md  performance.md  security.md  usability.md
docs/sdd/requirements/stories/: US-001.md  US-002.md  US-003.md  US-004.md  US-005.md  US-006.md
docs/sdd/tasks/: index.md
docs/sdd/tasks/phase-1/: TASK-001.md
docs/sdd/tasks/phase-2/: TASK-002.md  TASK-003.md  TASK-004.md  TASK-005.md  TASK-006.md  TASK-007.md  TASK-008.md  TASK-009.md
docs/sdd/tasks/phase-3/: TASK-010.md  TASK-011.md
docs/sdd/tasks/phase-4/: TASK-012.md
speakdrop/: __init__.py  __main__.py  app.py  audio_recorder.py  clipboard_inserter.py  config.py  hotkey_listener.py  icons.py  permissions.py  text_processor.py  transcriber.py
tests/: conftest.py  test_app.py  test_audio_recorder.py  test_clipboard_inserter.py  test_config.py  test_hotkey_listener.py  test_icons.py  test_main.py  test_permissions.py  test_text_processor.py  test_transcriber.py
