[project]
name = "speakdrop"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "rumps>=0.4.0",
    "pynput>=1.7.0",
    "sounddevice>=0.4.0",
    "faster-whisper>=1.0.0",
    "numpy>=1.24.0",
    "ollama>=0.3.0",
    "pyobjc-framework-Cocoa>=10.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-AVFoundation>=10.0",
]

[project.scripts]
speakdrop = "speakdrop.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
extend-select = ["C90"]

[tool.ruff.lint.mccabe]
# 最大複雑度 10 = xenon の -b B 相当（B ランク上限）
max-complexity = 10

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["speakdrop"]
omit = ["speakdrop/__main__.py"]

[tool.coverage.report]
fail_under = 80
